<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sathi4Shopping</string>
    <string name="name">Name</string>
    <string name="type_your_messsage">Type your query . . . </string>
    <string name="agree_to_our_privacy_police"><![CDATA[Agree to our <font color="#000000"><u>privacy policy</u></font> <br> &nbsp and <font color="#000000"><u>Terms and Condition</u></font> ]]></string>
    <string name="get_started">Let\'s Started</string>
    <string name="ask_your_query">Ask your query</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="otp"><![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
    <string name="otp1"><![CDATA[<font color="#a3a3a3">Enter OTP send to </font> <font color="#000000">+91–9876–564–656</font>]]></string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="my_profile">My Profile</string>
    <string name="specs">Specs</string>
    <string name="address">Address</string>
    <string name="coins_history">
        <u>Rewards History</u></string>
    <string name="website">https://sathi4shopping.com/</string>
    <string name="email">sathi4shopping@gmail.com</string>
    <string name="address_nverification">Address\nVerification</string>
    <string name="house_no">House No</string>
    <string name="done">Done</string>
    <string name="country">Country</string>
     <string name="locality">Locality</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="your_rewards_history_nwill_appear_here">Your Rewards History\nwill appear here</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="x2731">✱</string>
    <string name="don_t_recieve_the_otp">Don\'t receive the OTP?</string>
    <string name="re_check_phone_number">RE-CHECK PHONE NUMBER</string>
    <string name="verify">VERIFY</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_1234_567_890">1234–567–890</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="your_offers_will_appear_here">Your offers will appear here.</string>
    <string name="your_notification_will_appear_here">Your notifications will appear here</string>
    <string name="your_trending_post_will_appear_here">Your trending post will appear here</string>
    <string name="_0">0</string>
    <string name="coins">Coins</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="inbox">Inbox</string>
    <string name="my_wallet">My Wallet</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="others_labels">Other Labels</string>
    <string name="about_us">About Us</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="ph_no">Phone number</string>
    <string name="thanks_for_verification">Thanks for verification</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="time_out">Time Out</string>
    <string name="profile_updated">Profile updated</string>
    <string name="no_internet_connection">No internet connection try again after some time</string>
    <string name="profile_image_update">Profile image updated</string>
    <string name="enter_correct_otp">Please enter a correct otp</string>
    <string name="enter_otp_send">Enter the OTP Send</string>
    <string name="phone_verification_fail">Phone verification failed</string>
    <string name="otp_send">OTP is send</string>
    <string name="enter_correct_no">Please enter correct mobile no</string>
    <string name="please_wait" tools:ignore="TypographyEllipsis">Please wait ...</string>
    <string name="deleted">Deleted</string>
    <string name="uploaded">Uploaded</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="slow_internet_connection">Slow internet connection</string>
</resources>