<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl"
    tools:context=".Activity.MainActivity">
    <TextView
        android:id="@+id/numberofuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/phone_number"/>
    <TextView
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:padding="8dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/buttonshape"
        android:layout_below="@id/numberofuser"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_below="@id/update"
        android:layout_marginTop="10dp"
        android:textColor="@color/color3"/>
</RelativeLayout>
