<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl"
    tools:context=".Activity.MainActivity">
    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/address"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@id/address"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/updateadd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@drawable/buttonshape"/>
    <TextView
        android:id="@+id/canceladd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color3"/>
    </LinearLayout>
</RelativeLayout>
