<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl"
    tools:context=".Activity.MainActivity">
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/gotham"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/my_profile"/>
<LinearLayout
    android:id="@+id/layoutupdate"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:id="@+id/updateimage"
        android:src="@drawable/thumbnaildefault"
        android:layout_height="60dp"/>
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:hint="@string/name"
            android:fontFamily="@font/gotham"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
    <TextView
        android:id="@+id/updateprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:padding="8dp"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/buttonshape"
        android:layout_below="@id/layoutupdate"/>
    <TextView
        android:id="@+id/cancel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:padding="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_below="@id/updateprofile"
        android:layout_marginTop="10dp"
        android:textColor="@color/color3"/>
</RelativeLayout>
