<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_below="@id/toolbar_address"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    tools:context=".Activity.VerifyPhoneNumberActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_address"/>
    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_address"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gotham"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/address_nverification"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/house_child"
                    android:gravity="center|start"
                    android:textStyle="bold"
                    android:fontFamily="@font/gotham"
                    android:inputType="textPostalAddress"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_no" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locality_child"
                    android:fontFamily="@font/gotham"
                    android:gravity="center|start"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/locality" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_child"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:fontFamily="@font/gotham"
                android:inputType="textPostalAddress"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:hint="@string/city" />
        </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:orientation="horizontal"
    android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/state_child"
                android:gravity="center|start"
                android:textStyle="bold"
                android:fontFamily="@font/gotham"
                android:inputType="textPostalAddress"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state" />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/zip_child"
            android:fontFamily="@font/gotham"
            android:gravity="center|start"
            android:textStyle="bold"
            android:textSize="16sp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postal_code" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/country_child"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:fontFamily="@font/gotham"
                android:inputType="textPostalAddress"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:hint="@string/country" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttonshape"
            android:text="@string/done"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/canceladdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/color3"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>