<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.WalletFragment">
    <ImageView
        android:id="@+id/rewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_transaction"
        android:layout_centerInParent="true"
        tools:ignore="ContentDescription" />
        <LinearLayout
            android:background="@drawable/background_wallet"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/rewardscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:layout_gravity="bottom"
                android:textColor="#000"
                android:textSize="70sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_gravity="bottom"
                android:textColor="#000"
                android:text="@string/coins"/>
            <TextView
                android:id="@+id/coinshistory"
                android:textSize="16sp"
                android:layout_gravity="end|bottom"
                android:gravity="end"
                android:textColor="#000"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coins_history"
                />
        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rewards"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="Do Shopping by Sathi4Shopping \nand earn rewards"/>
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>