<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Activity.VerifyPhoneNumberActivity">
    <ScrollView
        android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:padding="16dp">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/mail_box_img"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="6dp"
                android:text="@string/otp_verification"
                android:textAlignment="center"
                android:textColor="#9E9E9E"
                android:fontFamily="@font/gotham"
                android:textSize="28sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/gotham"
                android:lineSpacingExtra="6dp"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/gotham"
                android:text="@string/enter_mobile_number"
                android:textAlignment="center"
                android:textColor="#a3a3a3"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:weightSum="100">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="25"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/india_logo"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="75"
                    android:background="#f6f6f6">
                    <EditText
                        android:id="@+id/mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:fontFamily="@font/gotham"
                        android:hint="@string/_1234_567_890"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="12dp"
                        android:textColor="#000000"
                        android:textColorHint="#c7c7c8"
                        android:textSize="16sp"
                        tools:ignore="Autofill" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/generate_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/buttonshape"
                android:text="@string/generate_otp"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>